Fix spacing with romanization dropdowns and mishandling of words

--- a/frontend/src/components/TrackLyricsPage/TrackLyricsDisplay/TrackLyricsDisplay.module.css
+++ b/frontend/src/components/TrackLyricsPage/TrackLyricsDisplay/TrackLyricsDisplay.module.css
@@ -47,9 +47,14 @@
 	margin-top: 6px;
 }
 
-.inlineRomDropdown {
+.inlineRomDropdown,
+.splitRomDropdown {
 	font-size: 22px;
 	border: none;
 	background-color: inherit;
 	outline: none;
+}
+
+.splitRomDropdown {
+	color: inherit;
 }
